--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   mariadb:
     image: mariadb:10.6
@@ -36,7 +35,7 @@ services:
       - SHELL=/bin/bash
     volumes:
       - .:/workspace:cached
-    working_dir: /workspace/frappe-bench
+    working_dir: /workspace
     ports:
       - 8000-8005:8000-8005
       - 9000-9005:9000-9005
